--- a/content/blog/10-reasons-why-you-are-not-a-great-programmer/index.mdx
+++ b/content/blog/10-reasons-why-you-are-not-a-great-programmer/index.mdx
@@ -2,6 +2,7 @@
 title: 10 reasons why you are not a great programmer
 date: 2020-05-14
 description: What you have to admit before you become a better programmer
+keywords: How to Write Better Software
 ---
 
 Let’s assume you are a programmer with a few problems: Hard to implement change requests, buried under bugs, missed deadlines, overtime, stress, patching weak software, hating your codebase, thinking of finding another gig. 
