--- a/content/blog/how-i-made-this-site-with-gatsby-convertkit-and-netlify/index.mdx
+++ b/content/blog/how-i-made-this-site-with-gatsby-convertkit-and-netlify/index.mdx
@@ -2,7 +2,7 @@
 title: How I made this site with Gatsby, ConvertKit, and Netlify
 date: 2020-05-21
 description: How to make a personal blog in 2020 using the JAMStack (JavaScript, APIs and Markdown)
-keywords: Gastby, ConvertKit, Netlify
+keywords: ['Gastby', 'ConvertKit', 'Netlify']
 ---
 
 Over the years, I've started a few blogs but I never got serious about it. They were soon abandonware.
