--- a/content/blog/how-to-automate-twitter-card-images-for-your-blog/index.mdx
+++ b/content/blog/how-to-automate-twitter-card-images-for-your-blog/index.mdx
@@ -2,7 +2,7 @@
 title: How to automate twitter card images for your blog
 date: 2020-05-29
 description: Better looking article sharing on Twitter
-keywords: Twitter, Cloudinary, Gastby
+keywords: ['Twitter', 'Cloudinary', 'Gastby']
 ---
 You work hard to create quality content. And you would like that content to stand out as it deserves. One thing that can help you with this is to create nice images that go with your content. Everytime your content is shared on Twitter, the image is there, like the cherry on the cake.
 
