--- a/content/blog/how-to-handle-future-posts-in-gatsby/index.mdx
+++ b/content/blog/how-to-handle-future-posts-in-gatsby/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to ignore future blog posts with Gatsby
+title: How to handle future blog posts with Gatsby
 date: 2020-06-21
 description: Some static sites generators ignore out-of-the-box the blog posts with future dates, this is available by default in Gatsby but can be implemented easily
 keywords: ['Gatsby']
