--- a/content/blog/eleventy-part-one/index.mdx
+++ b/content/blog/eleventy-part-one/index.mdx
@@ -1,5 +1,6 @@
 ---
-title: Let's Learn Eleventy - Part I
+title: Let's Learn Eleventy
+part: I
 date: 2020-08-26
 description: This is the first part of the Let't Learn Eleventy series. We'll learn what is Eleventy and how to get started with it. 
 keywords: ['Eleventy', '11ty']
