--- a/content/blog/two-styles-of-writing-code/index.mdx
+++ b/content/blog/two-styles-of-writing-code/index.mdx
@@ -243,8 +243,6 @@ he simply cannot see the forest for the trees.
 
 
 Resouces
-* [Code is prose](https://matthewbischoff.com/code-is-prose/)
+* [Writing Good Code is a lot Like Writing Prose](https://www.alexkras.com/writing-code-is-a-lot-like-writing-prose/)
 * [Semantic compression](https://caseymuratori.com/blog_0015)
 * [What Programming is Never About](https://www.youtube.com/watch?v=Lzc3HcIgXis)
-
-
