--- a/content/blog/two-styles-of-writing-code/index.mdx
+++ b/content/blog/two-styles-of-writing-code/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: The two styles of writing code
 date: 2020-09-26
-description:  
+description: Writing code is like writing prose (The top-down approach) and Compression-oriented programming (The bottom-up approach)
 keywords: ['How to Write Better Software']
 ---
 
