--- a/content/blog/five-easy-website-accessibility-tips/index.mdx
+++ b/content/blog/five-easy-website-accessibility-tips/index.mdx
@@ -1,13 +1,13 @@
 ---
 title: Five easy website accessibility tips
-date: 2020-09-26
-description:  
+date: 2020-09-28
+description: Things I've learned from Inclusive Design 24 2020
 keywords: ['a11y','HTML', 'CSS']
 ---
 
 Lots of excellent talks at [Inclusive Design 24](https://inclusivedesign24.org/2020/). 
 Two of them, *"Writing even more CSS with Accessibility in Mind"* by Manuel Matuzovic and *"Emergency Website Kit"* by Max Böck
-were particulary useful for me, I've learn a few things and used some of them to improve the accesibility of this site. 
+were particularly useful for me, I've learned a few things and used some of them to improve the accessibility of this site. 
 
 Hopefully, you'll find them useful also. Here they are:
 
@@ -102,9 +102,9 @@ I've used a `<small>` tag to display the post publication date but `time` is muc
 ```
 
 ### Fix site name header 
-For the site name I've used a `h1` on the index and a `h3` on the blog post pages.
-The problem is that is not correct on the blog post since the page headigs are in the wrong order: h3, h1, h2.
-To fix is I've replaced the `h1` and `h3` with a simple `div`.
+For the site name, I've used an `h1` on the index and an `h3` on the blog post pages.
+The problem is that this is not correct on the blog post since the page headings are in the wrong order: h3, h1, h2.
+To fix it, I've replaced the `h1` and `h3` with a simple `div`.
 
 ``` jsx
 <header role="banner" className='main-header centered-content'>
