--- a/content/blog/functional-style-programming/index.mdx
+++ b/content/blog/functional-style-programming/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Functional Style Programming
 date: 2020-08-17
-description: 
+description: What is functional style programming and why it's useful
 keywords: ['Functional programming', 'Functional style', 'JavaScript']
 ---
 The vast majority of us, programmers, use an OOP language like Java, C++, or C#. Very few are using a functional programming language like Haskell, Elixir, or Clojure.
