--- a/content/blog/two-styles-of-writing-code/index.mdx
+++ b/content/blog/two-styles-of-writing-code/index.mdx
@@ -242,7 +242,7 @@ he simply cannot see the forest for the trees.
 *No matter what style you like, top-down or bottom-up is important to write code that solves the problem!*
 
 
-Resouces
+## Resources
 * [Writing Good Code is a lot Like Writing Prose](https://www.alexkras.com/writing-code-is-a-lot-like-writing-prose/)
 * [Semantic compression](https://caseymuratori.com/blog_0015)
 * [What Programming is Never About](https://www.youtube.com/watch?v=Lzc3HcIgXis)
