--- a/content/blog/cyberpunk-2077-glitch-effect/index.mdx
+++ b/content/blog/cyberpunk-2077-glitch-effect/index.mdx
@@ -63,7 +63,7 @@ Here is the CSS (without the actual animation code).
     background-repeat: no-repeat;
 }
 ```
-* The container has position is relative and hides the content that overflows.
+* The container position is relative and hides the content that overflows.
 * The overlay has an absolute position. Uses as background the same image like the one put inside the container.
 * The overlay animation takes 2 seconds, is repeated forever, uses a linear easing, and animation direction alternates
 
@@ -106,9 +106,9 @@ And finally, here is the animation in slow motion (10x slower).
 
 <Glitch version={3}/>
 
-Most of the steps take are displayed for at least a second, with the exception of 4 steps. 3 are much faster (see below steps 13.1%, 20.1% and 60.1%).
+Most of the steps are displayed for at least a second, with the exception of 4 steps. 3 are much faster (see below steps 13.1%, 20.1%, and 60.1%).
 
-The last step is the slowest, and takes about 40% of the animation duration.
+The last step is the slowest and takes about 40% of the animation duration.
 
 
 ## Animation code
