--- a/content/blog/cyberpunk-2077-glitch-effect/index.mdx
+++ b/content/blog/cyberpunk-2077-glitch-effect/index.mdx
@@ -104,11 +104,15 @@ The advantage of this version is that we don't have to use the image twice, and 
 ### Slow motion
 And finally, here is the animation in slow motion (10x slower).
 
+I've added an animation timer to make clear that the animation runs first from the start and the second time from the end,
+it alternates the starting point. This is set by `animation-direction: alternate`
+
 <Glitch version={3}/>
 
-Most of the steps are displayed for at least a second, with the exception of 4 steps. 3 are much faster (see below steps 13.1%, 20.1%, and 60.1%).
+Most of the steps are displayed for at least a second, except for 4 steps. 3 are much faster (see below steps 13.1%, 20.1%, and 60.1%).
 
-The last step is the slowest and takes about 40% of the animation duration.
+The last step is the slowest and takes about 40% of the animation duration. And because the second time the animation starts from the end, 
+the gap when nothing happens appears to be very big.
 
 
 ## Animation code
