Glitch timer fix

--- a/content/blog/cyberpunk-2077-glitch-effect/index.mdx
+++ b/content/blog/cyberpunk-2077-glitch-effect/index.mdx
@@ -104,8 +104,7 @@ The advantage of this version is that we don't have to use the image twice, and 
 ### Slow motion
 And finally, here is the animation in slow motion (10x slower).
 
-I've added an animation timer to make clear that the animation runs first from the start and the second time from the end,
-it alternates the starting point. This is set by `animation-direction: alternate`
+Now it's clearer that the animation runs first from the start and the second time from the end, it alternates the starting point. This is set by `animation-direction: alternate`
 
 <Glitch version={3}/>
 
