--- a/content/blog/eleventy-part-two/index.mdx
+++ b/content/blog/eleventy-part-two/index.mdx
@@ -107,7 +107,7 @@ restaurant.md
 ```markdown
 ---
 title: Restaurant website
-date: 2020-01-01 // highlight-line
+date: 2020-01-01 
 ---
 ```
 
@@ -115,7 +115,7 @@ shop.md
 ```markdown
 ---
 title: Shop website
-date: 2020-01-03 // highlight-line
+date: 2020-01-03 
 ---
 ```
 
@@ -123,7 +123,7 @@ travel.md
 ```markdown
 ---
 title: Travel website
-date: 2020-01-02 // highlight-line
+date: 2020-01-02 
 ---
 ```
 If you want them reversed, you can add `reversed` next to collection name:
@@ -173,7 +173,7 @@ in frontmatter. For example, to exclude restaurant item you can do:
 restaurant.md
 ```markdown
 ---
-eleventyExcludeFromCollections: true  // highlight-line
+eleventyExcludeFromCollections: true  
 title: Restaurant website
 description: Allow clients to make reservations online
 tags: portfolio
