--- a/content/blog/five-easy-website-accessibility-tips/index.mdx
+++ b/content/blog/five-easy-website-accessibility-tips/index.mdx
@@ -21,7 +21,7 @@ I should use `1rem` because some users might need a larger default font size.
 html, body {
     margin: 0;
     padding: 0;
-    font-size: 1rem; // highlight-line
+    font-size: 1rem; 
     font-family: 'IBM Plex Sans', Arial, Helvetica, Verdana, sans-serif;
     min-height: 100vh;
     color: var(--color);
