--- a/content/blog/how-to-get-100-performance-score/index.mdx
+++ b/content/blog/how-to-get-100-performance-score/index.mdx
@@ -57,7 +57,7 @@ the [`gatsby-plugin-no-javascript`](https://www.gatsbyjs.org/packages/gatsby-plu
 module.exports = {
   plugins: [
       ...
-      `gatsby-plugin-no-javascript` // highlight-line
+      `gatsby-plugin-no-javascript` 
   ]
 }      
 ```
