--- a/content/blog/how-to-make-an-npm-package/index.mdx
+++ b/content/blog/how-to-make-an-npm-package/index.mdx
@@ -112,13 +112,13 @@ Then change the test script from `package.json`:
   "description": "A collection of date and time related functions",
   "main": "index.js",
   "scripts": {
-    "test": "jest" // highlight-line
+    "test": "jest" 
   },
   "author": "Jane Doe",
   "license": "MIT",
-  "devDependencies": {  // highlight-line
-    "jest": "^26.0.1",  // highlight-line
-  }                     // highlight-line
+  "devDependencies": {  
+    "jest": "^26.0.1",  
+  }                     
 }
 ```
 
@@ -152,9 +152,9 @@ You should specify which files need to be shipped.
   "scripts": {
     "test": "jest" 
   },
-  "files": [    // highlight-line
-    "index.js"  // highlight-line
-  ],            // highlight-line
+  "files": [    
+    "index.js"  
+  ],            
   "author": "Jane Doe",
   "license": "MIT",
   "devDependencies": {  
@@ -183,10 +183,10 @@ $ npm pack
 npm notice 
 npm notice 📦  dates-and-times@0.1.0
 npm notice === Tarball Contents === 
-npm notice 939B  package.json   // highlight-line
-npm notice 2.1kB index.js       // highlight-line
-npm notice 1.1kB LICENSE        // highlight-line
-npm notice 5.3kB README.md      // highlight-line 
+npm notice 939B  package.json   
+npm notice 2.1kB index.js       
+npm notice 1.1kB LICENSE        
+npm notice 5.3kB README.md       
 npm notice === Tarball Details === 
 npm notice name:          dates-and-times                     
 npm notice version:       0.1.0                                   
