--- a/content/blog/eleventy-part-three/index.mdx
+++ b/content/blog/eleventy-part-three/index.mdx
@@ -42,12 +42,12 @@ Here is an example, a `base.njk` layout:
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {% block head %} // highlight-line
-  {% endblock %} // highlight-line
+  {% block head %} 
+  {% endblock %} 
 </head>
 <body>
-  {% block content %} // highlight-line
-  {% endblock content %} // highlight-line
+  {% block content %} 
+  {% endblock content %} 
 </body>
 </html>
 ```
@@ -61,9 +61,9 @@ Pages can now add some critical CSS in the `head` and the content in the `body`
 title: 'Homepage'
 ---
 
-{% extends 'layouts/base.njk' %} // highlight-line
+{% extends 'layouts/base.njk' %} 
 
-{% block head %} // highlight-line
+{% block head %} 
   <style>
     html, body {
         margin: 0;
@@ -74,12 +74,12 @@ title: 'Homepage'
         background-color: #222;
     }
   </style>  
-{% endblock %}     // highlight-line
-{% block content %}  // highlight-line
+{% endblock %}     
+{% block content %}  
     <main id="main-content">
       ...
     </main>
-{% endblock %} // highlight-line
+{% endblock %} 
 ```
 ### Pros
 
@@ -121,7 +121,7 @@ And you used it by *including* it in a site header component:
     <a href="/">
         <img src="logo.svg" alt="My logo">
     </a>
-    {% include "components/nav.njk" %} // highlight-line
+    {% include "components/nav.njk" %} 
 </header>
 ```
 *Note:* the path to include must be relative to `_includes` folder (e.g. `_includes/components/nav.njk`) not 
@@ -134,15 +134,15 @@ like there was a single file from the beginning:
     <a href="/">
         <img src="logo.svg" width="50px" height="50px" alt="My logo">
     </a>
-    {% if navigation.items %}  // highlight-line
-        <nav class="nav"> // highlight-line
-            <ul>  // highlight-line
-            {% for item in navigation.items %} // highlight-line
-                <li class="nav-item"><a href="{{ item.url }}">{{ item.label }}</a></li> // highlight-line
-            {% endfor %} // highlight-line
-            </ul> // highlight-line
-        </nav> // highlight-line
-    {% endif %} // highlight-line
+    {% if navigation.items %}  
+        <nav class="nav"> 
+            <ul>  
+            {% for item in navigation.items %} 
+                <li class="nav-item"><a href="{{ item.url }}">{{ item.label }}</a></li> 
+            {% endfor %} 
+            </ul> 
+        </nav> 
+    {% endif %} 
 </header>
 ```
 
@@ -158,7 +158,7 @@ Of course, you can then use the `header.njk` in the `base.njk` layout or somewhe
   {% endblock %}
 </head>
 <body>
-  {% include "components/header.njk" %} // highlight-line
+  {% include "components/header.njk" %} 
   {% block content %}
   {% endblock content %} 
   {% include "components/footer.njk" %}
