--- a/content/blog/the-future-of-code-is-no-code/index.mdx
+++ b/content/blog/the-future-of-code-is-no-code/index.mdx
@@ -12,23 +12,25 @@ I think Chris Wanstrath said this because he is also concerned. Github is the la
 for Github when there won't be much code left to be put in the repository.
 
 
-## What is nocode? 
-Nocode software means one can create the software he needs without any coding. There is also a low-code variant that implies a small amount of coding.
+## What is no code? 
+No code software means one can create the software he needs without any coding. There is also a low-code variant that implies a small amount of coding.
 The idea itself is amazing: everyone can create software without doing any programming. 
 
-Every little shop can have a e-commerce website, every bussiness a smartphone app, every enterprise it's own complex and customized software. 
+![Setting up a site a Carrd](./carrd.png "Setting up a site a Carrd")
+
+Every little shop can have an e-commerce website, every business a smartphone app, every enterprise it's complex and customized software. 
 All without any code and without any programmer involved.
 
 So how this works? If I'm a little shop somewhere and I need a website what I do?
-* First I need to select a "Solution Vendor". There will be cheep ones and expensive ones, just as today agencies.
-* Then I need to select the template of my website. Ideally I can use an AI to help choose the one appropiate for my bussiness. 
+* First I need to select a "Solution Vendor". There will be cheap ones and expensive ones,  just like today's agencies.
+* Then I need to select the template of my website. Ideally, I can use an AI to help choose the one appropriate for my business. 
 The AI can help choose an existing template or create a new one from *pieces of existing templates.*
-* Then I need to fill my own information like site name, copy, images and so on.
+* Then I need to fill in my information like site name, copy, images, and so on.
 * That's it. All the needed servers will be spawned automatically, the website will auto-update each time the content is edited or added.
 I'll have access to analytics dashboards, payments, inventory, everything I need. 
 
-The most beautiful thing will be that I will not have to care about security issues (sotfware vulnerabilities will be patched automatically), 
-runtime issues (servers will scale to accomodate trafic spikes), accessiblity issues(will work in all browsers, with or without JavaScript, 
+The most beautiful thing will be that I will not have to care about security issues (software vulnerabilities will be patched automatically), 
+runtime issues (servers will scale to accommodate traffic spikes), accessibility issues(will work in all browsers, with or without JavaScript, 
 sematic HTML will be used) or any other possible issue.
 
 Everything will just work.
@@ -36,49 +38,51 @@ Everything will just work.
 The only little problem will be that all websites will look and feel the same. We won't have much room for deep personalization or unique identity.
 
 
-## Why nocode is popular?
-The first and most important reason nocode is so popular is that today great programming is expensive, time consuming and (I might add) scarce.
+## Why no code is popular?
+The first and most important reason no code is so popular is that today great programming is expensive, time-consuming, and (I might add) scarce.
 
-Second reason is that, as a non technical person, you don't know what programmers to choose, what database you need, what servers you need and so on. 
-It's much easier to choose a out-of-the box working solution like the one nocode can provide.
+The second reason is that, as a non-technical person, you don't know what programmers to choose, what database you need, what servers you need, and so on. 
+It's much easier to choose an out-of-the-box working solution like the one no code can provide.
 
-The third reason is that nocode software can become optimized and bullet-proof, thus a more viable alternative to re-implementing 
+The third reason is that no code software can become optimized and bullet-proof, thus a more viable alternative to re-implementing 
 the same similar software many times, each implementation of different quality.  
 
 
-## Will nocode win?
+## Will no code win?
 I think it will eventually. 
 
-In my opinion, nocode needs a great AI. *Nocode is just a collection of preexisting components(standalone pieces of software) combined in a certain way.*
-But it needs a ton of components to be realy useful and allow personalization.
+In my opinion, no code needs a great AI. *No code is just a collection of preexisting components(standalone pieces of software) combined in a certain way.*
+But it needs a ton of components to be useful and allow personalization.
 
 Going back to the website example: If there are just ten or twenty templates to choose from, that won't allow a website to be very different from others. 
-But each website wants to be different and unique. And so wants each brand and bussiness. For this we need a lot of components to choose from. 
-In fact we need so many components that it would be tedius to find the right one. 
+But each website wants to be different and unique. And so wants each brand and business. For this, we need a lot of components to choose from. 
+In fact, we need so many components that it would be tedious to find the right one. 
 
 That is why we would need an API that could select them for us and combine them in an optimal way.
 
-*Imagine you're one of the Mars colonists, and you need a piece of software that is unique to your needs there - something that nobody on Earth though about - 
-and of course there are no programmers on Mars. Your only chance is a nocode software created by an AI.* 
+*Imagine you're one of the Mars colonists, and you need a piece of software that is unique to your needs there - something that nobody on Earth thought about - 
+and of course there are no programmers on Mars. Your only chance is a no code software created by an AI.* 
 
 
-## Should I stop coding because nocode is the future?
-No. We don't know when nocode will win. Or even if it will win. 
+## Should I stop coding because no code is the future?
+No. We don't know when no code will win. Or even if it will win. 
 
 Just think about it, we still write code letter by letter like we did in 1950.
-It's incredible tedious, it's unbelivable we still do it in the same way in 2021. There must be a better way but we didn't find it yet.
+It's incredibly tedious, it's unbelievable we still do it in the same way in 2021. There must be a better way but we didn't find it yet.
 
-Maybe nocode is that new way. Apple's Quartz Composer was one of the first popular examples of nocode programming but for some reason it's gone today.
-The successor, Facebook's Origami studio is still used, but I don't know how popular it is. But in both cases the user must know all available components 
+![Quartz Composer](./quartz.jpeg "Quartz Composer")
+
+Maybe no code is that new way. Apple's Quartz Composer was one of the first popular examples of no code programming but for some reason, it's gone today.
+The successor, Facebook's Origami studio is still used, but I don't know how popular it is. But in both cases, the user must know all available components 
 and what they can do. So the user is a kind of programmer, it technical.
 
-So, for now we'll just keep coding. Even nocode needs components that have to be coded by somebody. So, we programmers, we'll still be busy.
+So, for now, we'll just keep coding. Even no code needs components that have to be coded by somebody. So, we programmers, we'll still be busy.
 
 
 ## Conclusion
 
-I believe nocode is the future. The current way of making software by writing code letter by letter is just not good enough.
-The time lost on all the typing, code surfing and debugging is just too much today. We need something better.
+I believe no code is the future. The current way of making software by writing code letter by letter is just not good enough.
+The time lost on all the typing, code surfing, and debugging is just too much today. We need something better.
 
-There'll still be a need for programmers in a nocode world. But maybe those will more efficient or maybe just more happy.
+There'll still be a need for programmers in a no code world. But maybe those will more efficient or maybe just happier.
 
