--- a/content/blog/react-playground/index.mdx
+++ b/content/blog/react-playground/index.mdx
@@ -9,7 +9,7 @@ The playground has two parts:
 * The code editor: Allows us to enter the React code we want to evaluate
 * The code evaluation sandbox: Evaluates (executes) the React code from the code editor and creates the corresponding DOM 
 
-In the left we have the editor and in the right we have the sandbox iframe. Each time the code is changed, the sandbox evaluates the code again.
+On the left, we have the editor and on the right, we have the sandbox iframe. Each time the code is changed, the sandbox evaluates the code again.
 ![React Playground](./react-playground.png "The React Playground in action")
 
 ##  Setting up the sandbox 
@@ -22,7 +22,7 @@ We run everything in the browser, so we need to load the two React scripts: `rea
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 ```
 
-We also want JSX, so we need Babel to traspile JSX to plain JavaScript. Usually we use Babel at build time, but here we 
+We also want JSX, so we need Babel to transpile JSX to plain JavaScript. Usually, we use Babel at build time, but here we 
 need it at runtime, so we need to use the standalone version.
 
 ```HTML
@@ -39,7 +39,7 @@ catch(err){
 }    
 ```
 
-Everytime we change the code we want to evaluate, we need to get rid of the current evaluation result (all DOM nodes created by the current evaluation).
+Every time we change the code we want to evaluate, we need to get rid of the current evaluation result (all DOM nodes created by the current evaluation).
 There are several ways to do this, but I prefer to put the code evaluation piece in a separate iframe, `sandbox.html`
 
 ```HTML
@@ -83,7 +83,7 @@ There are several ways to do this, but I prefer to put the code evaluation piece
 </html>
 
 ```
-Inside the iframe we have 
+Inside the iframe, we have 
 * a `pre` that displays the error details if necessary
 * a div with id "app" that is the container used by the React.
 Only one of them is displayed at a time.
@@ -92,7 +92,7 @@ Only one of them is displayed at a time.
 ## Code editor
 
 We already covered [setting up CodeMirror](/how-to-make-a-code-editor-with-codemirror6/), so we won't do that here.
-The part I want to highligh here is the code evaluation( calling `evaluateCode()` ) which is done 
+The part I want to highlight here is the code evaluation( calling `evaluateCode()` ) which is done 
 * when the page is loaded
 * each time the user changes the code in the editor
 
@@ -142,7 +142,7 @@ const evaluateCode = (code) => {
 ## Putting them together
 
 Inside `index.html` we load the `editor.bundle.js` which will create the code editor and also the sandbox iframe.
-Note that we need set some properties to allow the iframe to execute the code we send to it.
+Note that we need to set some properties to allow the iframe to execute the code we send to it.
 
 ```HTML
 <!DOCTYPE html>
