--- a/content/blog/javascript-part-two/index.mdx
+++ b/content/blog/javascript-part-two/index.mdx
@@ -54,19 +54,13 @@ Now open `index.html` with a browser. You'll see an empty page, that is fine.
 To see the "Hello, World!" text, you need to open the browser's JavaScript console. How you do this depends on the browser, but here are some examples:
 
 #### Chrome
-<video width="100%" controls muted>
-  <source src="chrome.mp4" type="video/mp4" />
-</video>
+![Chrome JavaScript console](./chrome.png "Chrome JavaScript console")
 
 #### Firefox
-<video width="100%" controls muted>
-  <source src="firefox.mp4" type="video/mp4" />
-</video>
+![Firefox JavaScript console](./firefox.png "Firefox JavaScript console")
 
 #### Safari (first you need to [enable "Develop" menu](https://support.apple.com/en-gb/guide/safari/sfri20948/mac))
-<video width="100%" controls muted>
-  <source src="safari.mp4" type="video/mp4" />
-</video>
+![Safari JavaScript console](./safari.png "Safari JavaScript console")
 
 
 
@@ -90,10 +84,7 @@ fewer mistakes. Not to mention project structure and settings.
 For JavaScript developers (and web developers in general), I recommend [Visual Studio Code](https://code.visualstudio.com/) these days.
 Go ahead install it and use it, it's free and it's awesome.
 
-
-<video width="100%" controls muted>
-  <source src="vscode.mp4" type="video/mp4" />
-</video>
+![Visual Studio Code](./vscode.png "Visual Studio Code")
 
 ## Summary
 * JavaScript code goes in files with `.js` extension
